--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
                 <li><a href="#tools">Tools</a></li>
                 <li><a href="#team">Team</a></li>
                 <li><a href="#contact">Contact</a></li>
-<<<<<<< HEAD
                 <li><a href="bitcoin.html" target="_blank">Contribute</a></li>
-=======
-                <li><a href="" target="_blank">Contribute</a></li>
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
             </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
         </div>
@@ -105,26 +101,17 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">The Furk Locker <i class="mdi-navigation-more-vert right"></i></span>
-<<<<<<< HEAD
                         <p><a target="_blank" href="http://the-furk-locker.herokuapp.com/new">The-Furk-Locker</a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">The Furk Locker<i class="mdi-navigation-close right"></i></span>
                         <p>The Furk Locker is an implementation of the open source encryption tool, Sharelock. <br><br> Simply and securely share secret information with people you trust.<br><br> A special thanks to: <br> <a href="https://github.com/auth0/sharelock" target="_blank"> Sharelock</a></p>
-=======
-                        <p><a href="#">The-Furk-Locker</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Project Title <i class="mdi-navigation-close right"></i></span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                     </div>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-<<<<<<< HEAD
                         <img class="activator" src="img/furkChat.png">
                     </div>
                     <div class="card-content">
@@ -135,28 +122,13 @@
                         <span class="card-title grey-text text-darken-4">FurkChat<i class="mdi-navigation-close right"></i></span>
                         <p>The official Furk centralized communication method. FurkChat is a free based Slack implementation that is one of the few Furk products not hosted on a Furk managed server. Despite the lack of independance, Slack as served us well thus far.<br><br>Special Thanks to:<br>
                         <a href="https://slack.com" target="_blank">Slack</a></p>
-=======
-                        <img class="activator" src="img/project2.jpeg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#">Project link</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Project Title <i class="mdi-navigation-close right"></i></span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                     </div>
                 </div>
             </div>
             <div class="col s12 m4 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-<<<<<<< HEAD
                         <img class="activator" src="img/furkComingSoon.png">
-=======
-                        <img class="activator" src="img/project3.png">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
@@ -171,11 +143,7 @@
             <div class="col s12 m4 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-<<<<<<< HEAD
                         <img class="activator" src="img/furkComingSoon.png">
-=======
-                        <img class="activator" src="img/project4.jpg">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
@@ -190,11 +158,7 @@
             <div class="col s12 m4 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-<<<<<<< HEAD
                         <img class="activator" src="img/furkComingSoon.png">
-=======
-                        <img class="activator" src="img/project5.png">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
@@ -206,17 +170,10 @@
                     </div>
                 </div>
             </div>
-<<<<<<< HEAD
           <div class="col s12 m4 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="img/furkComingSoon.png">
-=======
-            <div class="col s12 m4 l4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="img/project6.jpeg">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
@@ -250,31 +207,17 @@
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Flash <br/>
                             <small><em><a class="red-text text-darken-1" href="#">CEO</a></em></small></span>
-<<<<<<< HEAD
-                     <p>
-                            <a class="blue-text text-lighten-2" href="#">
-                                <i class="fa fa-facebook-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="#">
-                                <i class="fa fa-twitter-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="#">
-                                <i class="fa fa-google-plus-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="#">
-=======
                         <p>
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
+                            <a class="blue-text text-lighten-2" href="#">
                                 <i class="fa fa-facebook-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
+                            <a class="blue-text text-lighten-2" href="#">
                                 <i class="fa fa-twitter-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
+                            <a class="blue-text text-lighten-2" href="#">
                                 <i class="fa fa-google-plus-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
+                            <a class="blue-text text-lighten-2" href="#">
                                 <i class="fa fa-linkedin-square"></i>
                             </a>
                         </p>
@@ -290,31 +233,17 @@
                         <span class="card-title activator grey-text text-darken-4">Cat Woman<br/>
                             <small><em><a class="red-text text-darken-1" href="#">Designer</a></em></small>
                         </span>
-<<<<<<< HEAD
-                      <p>
-                            <a class="blue-text text-lighten-2" href="#">
-                                <i class="fa fa-facebook-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="#">
-                                <i class="fa fa-twitter-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="#">
-                                <i class="fa fa-google-plus-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="#">
-=======
                         <p>
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
+                            <a class="blue-text text-lighten-2" href="#">
                                 <i class="fa fa-facebook-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
+                            <a class="blue-text text-lighten-2" href="#">
                                 <i class="fa fa-twitter-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
+                            <a class="blue-text text-lighten-2" href="#">
                                 <i class="fa fa-google-plus-square"></i>
                             </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
+                            <a class="blue-text text-lighten-2" href="#">
                                 <i class="fa fa-linkedin-square"></i>
                             </a>
                         </p>
@@ -330,8 +259,7 @@
                         <span class="card-title activator grey-text text-darken-4">
                             Capt. America <br/>
                             <small><em><a class="red-text text-darken-1" href="#">CMO</a></em></small></span>
-<<<<<<< HEAD
-                     <p>
+                      <p>
                             <a class="blue-text text-lighten-2" href="#">
                                 <i class="fa fa-facebook-square"></i>
                             </a>
@@ -342,22 +270,6 @@
                                 <i class="fa fa-google-plus-square"></i>
                             </a>
                             <a class="blue-text text-lighten-2" href="#">
-<<<<<<< HEAD
-=======
-=======
->>>>>>> de3c4259e42aa6fc2bf7b1d3a9b3fae1ae218d23
-                        <p>
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
-                                <i class="fa fa-facebook-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
-                                <i class="fa fa-twitter-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
-                                <i class="fa fa-google-plus-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                                 <i class="fa fa-linkedin-square"></i>
                             </a>
                         </p>
@@ -372,11 +284,7 @@
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Robin<br/>
                             <small><em><a class="red-text text-darken-1" href="#">Developer</a></em></small></span>
-                        <p>
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> de3c4259e42aa6fc2bf7b1d3a9b3fae1ae218d23
+                  <p>
                             <a class="blue-text text-lighten-2" href="#">
                                 <i class="fa fa-facebook-square"></i>
                             </a>
@@ -387,21 +295,6 @@
                                 <i class="fa fa-google-plus-square"></i>
                             </a>
                             <a class="blue-text text-lighten-2" href="#">
-<<<<<<< HEAD
-=======
-=======
->>>>>>> de3c4259e42aa6fc2bf7b1d3a9b3fae1ae218d23
-                            <a class="blue-text text-lighten-2" href="https://www.facebook.com/joash.c.pereira">
-                                <i class="fa fa-facebook-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://twitter.com/im_joash">
-                                <i class="fa fa-twitter-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://plus.google.com/u/0/+JoashPereira">
-                                <i class="fa fa-google-plus-square"></i>
-                            </a>
-                            <a class="blue-text text-lighten-2" href="https://www.linkedin.com/in/joashp">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                                 <i class="fa fa-linkedin-square"></i>
                             </a>
                         </p>
@@ -443,80 +336,32 @@
                 </form>
             </div>
             <div class="col l3 s12">
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> de3c4259e42aa6fc2bf7b1d3a9b3fae1ae218d23
-                <h5 class="white-text">Totalbruiser.com</h5>
+                <h5 class="white-text">totalbruiser.com</h5>
                 <ul>
-                    <li><a class="white-text" href="http://totalbruiser.com">Home</a></li>
+                    <li><a class="white-text" href="http://www.totalbruiser.com/">Home</a></li>
                     <li><a class="white-text" href="#">Blog</a></li>
-<<<<<<< HEAD
-=======
-=======
->>>>>>> de3c4259e42aa6fc2bf7b1d3a9b3fae1ae218d23
-                <h5 class="white-text">joashpereira.com</h5>
-                <ul>
-                    <li><a class="white-text" href="http://www.joashpereira.com/">Home</a></li>
-                    <li><a class="white-text" href="http://www.joashpereira.com/blog">Blog</a></li>
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                 </ul>
             </div>
             <div class="col l3 s12">
                 <h5 class="white-text">Social</h5>
                 <ul>
                     <li>
-<<<<<<< HEAD
                         <a class="white-text" href="#">
-=======
-<<<<<<< HEAD
-                        <a class="white-text" href="#">
-=======
->>>>>>> de3c4259e42aa6fc2bf7b1d3a9b3fae1ae218d23
-                        <a class="white-text" href="https://www.behance.net/joashp">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                             <i class="small fa fa-behance-square white-text"></i> Behance
                         </a>
                     </li>
                     <li>
-<<<<<<< HEAD
                         <a class="white-text" href="#">
-=======
-<<<<<<< HEAD
-                        <a class="white-text" href="#">
-=======
->>>>>>> de3c4259e42aa6fc2bf7b1d3a9b3fae1ae218d23
-                        <a class="white-text" href="https://www.facebook.com/joash.c.pereira">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                             <i class="small fa fa-facebook-square white-text"></i> Facebook
                         </a>
                     </li>
                     <li>
-<<<<<<< HEAD
                         <a class="white-text" href="https://github.com/the4ndy/furk-main-website">
-=======
-<<<<<<< HEAD
-                        <a class="white-text" href="https://github.com/the4ndy/furk-main-website">
-=======
->>>>>>> de3c4259e42aa6fc2bf7b1d3a9b3fae1ae218d23
-                        <a class="white-text" href="https://github.com/joashp">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
                             <i class="small fa fa-github-square white-text"></i> Github
                         </a>
                     </li>
                     <li>
-<<<<<<< HEAD
-
                         <a class="white-text" href="#">
-                        <a class="white-text" href="https://www.linkedin.com/in/joashp">
-
-=======
-<<<<<<< HEAD
-                        <a class="white-text" href="#">
-=======
-                        <a class="white-text" href="https://www.linkedin.com/in/joashp">
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
->>>>>>> de3c4259e42aa6fc2bf7b1d3a9b3fae1ae218d23
                             <i class="small fa fa-linkedin-square white-text"></i> Linkedin
                         </a>
                     </li>
@@ -526,11 +371,7 @@
     </div>
     <div class="footer-copyright default_color">
         <div class="container">
-<<<<<<< HEAD
-            Made by the4ndy && others. Thanks to <a class="white-text" href="http://materializecss.com/">materializecss</a> && <a class="white-text" href="http://joashpereira.com">Joash Pereira</a>
-=======
-            Made by <a class="white-text" href="http://joashpereira.com">Joash Pereira</a>. Thanks to <a class="white-text" href="http://materializecss.com/">materializecss</a>
->>>>>>> 1084ef17d7eac10d6437619fe52c6a16fbe2aeef
+            Made by <a class="white-text" href="http://www.andyschilder.com">the4ndy</a> && <a class="white-text" href="https://www.github.com/the4ndy">Furk</a>. Thanks to <a class="white-text" href="http://materializecss.com/">materializecss</a> && <a class="white-text" href="http://joashpereira.com">Joash Pereira</a>
         </div>
     </div>
 </footer>
