--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">The Furk Locker<i class="mdi-navigation-close right"></i></span>
-                        <p>The Furk Locker is an implementation of the open source encryption tool, Sharelock. <br><br> Simply and securely share secret information with people you trust.<br><br> A special thanks to: <br> <a href="https://github.com/auth0/sharelock" target="_blank"> Sharelock</a></p>
+                        <p>The Furk Locker is an implementation of the open source encryption tool, Sharelock. <br><br> Simply and securely share secret information with people you trust.<br><br> A Special Thanks to: <br> <a href="https://github.com/auth0/sharelock" target="_blank"> Sharelock</a></p>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">FurkChat<i class="mdi-navigation-close right"></i></span>
-                        <p>The official Furk centralized communication method. FurkChat is a free based Slack implementation that is one of the few Furk products not hosted on a Furk managed server. Despite the lack of independance, Slack as served us well thus far.<br><br>Special Thanks to:<br>
+                        <p>The official Furk centralized communication method. FurkChat is a free based Slack implementation that is one of the few Furk products not hosted on a Furk managed server. Despite the lack of independance, Slack has served us well thus far.<br><br>A Special Thanks to:<br>
                         <a href="https://slack.com" target="_blank">Slack</a></p>
                     </div>
                 </div>
@@ -128,15 +128,17 @@
             <div class="col s12 m4 l4">
                 <div class="card">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="img/furkComingSoon.png">
+                        <img class="activator" src="img/furkNews_square.png">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Project Title <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#">Project link</a></p>
+                        <span class="card-title activator grey-text text-darken-4">Furk News <i class="mdi-navigation-more-vert right"></i></span>
+                        <p><a href="http://news.totalbruiser.com">Furk News</a></p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Project Title <i class="mdi-navigation-close right"></i></span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        <span class="card-title grey-text text-darken-4">Furk News <i class="mdi-navigation-close right"></i></span>
+                        <p>Furk News is an implementation of an open source Reddit style app called Telescope. Built on NodeJS and MongoDB and hosted ia Heroku this service serves as the ultimate private sub-reddit for Furk. 
+                        <br><br>A Special Thanks to:<br>
+                        <a href="http://www.telescopeapp.org/" target="_blank">Telescop</a></p>
                     </div>
                 </div>
             </div>
