--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <span class="card-title grey-text text-darken-4">Furk News <i class="mdi-navigation-close right"></i></span>
                         <p>Furk News is an implementation of an open source Reddit style app called Telescope. Built on NodeJS and MongoDB and hosted ia Heroku this service serves as the ultimate private sub-reddit for Furk. 
                         <br><br>A Special Thanks to:<br>
-                        <a href="http://www.telescopeapp.org/" target="_blank">Telescop</a></p>
+                        <a href="http://www.telescopeapp.org/" target="_blank">Telescope</a></p>
                     </div>
                 </div>
             </div>
